--- a/ansible/roles/haproxy/templates/reverse-proxy-k8s.j2
+++ b/ansible/roles/haproxy/templates/reverse-proxy-k8s.j2
@@ -26,7 +26,7 @@ backend app
     balance     roundrobin
 
 {% for server in groups['control_plane'] %}
-    server {{ hostvars[server]['ansible_facts'].host }} {{ hostvars[server]['ansible_facts'].default_ipv4.address }}:6443 check
+  server {{ hostvars[server]['ansible_facts'].hostname }} {{ hostvars[server]['ansible_facts'].default_ipv4.address }}:6443 check
 {% endfor %}
 
 
