--- a/ansible/roles/haproxy/templates/reverse-proxy-k8s.j2
+++ b/ansible/roles/haproxy/templates/reverse-proxy-k8s.j2
@@ -16,7 +16,7 @@ defaults
     timeout check 5s
 
 frontend main
-    bind {{ ha_proxy_ip }}:6443
+    bind {{ ha_proxy_ip }}:9443
     default_backend             app
 
 #---------------------------------------------------------------------
@@ -25,9 +25,10 @@ frontend main
 backend app
     balance     roundrobin
 
-{% for server in groups['all'] %}
-  server {{ hostvars[server]['ansible_facts'].hostname }} {{ hostvars[server]['ansible_facts'].default_ipv4.address }}:6443 check
-{% endfor %}
+    server {{ master_hostname_1 }} {{ master_ip_1 }}:6443 check
+    server {{ master_hostname_2 }} {{ master_ip_2 }}:6443 check
+    server {{ master_hostname_3 }} {{ master_ip_3 }}:6443 check
+
 
 
 listen stats # Define a listen section called "stats"
